# amis

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: amis.yaml
dashboard/: package-lock.json  package.json
dashboard/data/: article_entities.json  article_summaries.json  article_topics.json  audience_profiles.json  audience_summaries.json  campaign_steps.json  campaigns.json  content_repurposing.json  entities.json  knowledge_graph.json  platform_recommendations.json  platform_summaries.json  relationships.json  scores.json  stats.json  topics.json
docs/: README.md  agent-interface.md  analytics.md  api-reference.md  architecture.md  audience-mapping.md  autonomous-loop.md  campaign-planner.md  content-repurposing.md  data-flow.md  database.md  duplicate-detection.md  entity-recognition.md  ingestion.md  knowledge-graph.md  marketing-memory.md  marketing-ranking.md  platform-recommendation.md  recommendation-engine.md  semantic-analysis.md  spec.md  testing.md  topic-extraction.md
output/: 404.html  index.html  index.txt
output/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.txt
output/articles/: __next._tree.txt  __next.articles.__PAGE__.txt  index.html  index.txt
output/audiences/: __next._tree.txt  __next.audiences.__PAGE__.txt  index.html  index.txt
output/campaigns/: __next._full.txt  __next._tree.txt  __next.campaigns.__PAGE__.txt  index.html  index.txt
output/graph/: __next._tree.txt  __next.graph.__PAGE__.txt  index.html  index.txt
scripts/: export_data.py
src/: cli.py  config.py
(+571 files in other folders)
